# tauri-plugin-connectivity

./: .gitignore  .markdownlint-cli2.cjs  Cargo.toml  README.md  build.rs  package-lock.json  package.json  rollup.config.js
android/: build.gradle.kts  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/org/silvermine/plugin/connectivity/: Connectivity.kt  ConnectivityPlugin.kt
docs/: android-connectivity-manual-testing.md  ios-connectivity-manual-testing.md  linux-connectivity-manual-testing.md
examples/tauri-app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/tauri-app/src/: main.ts  styles.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs  main.rs
guest-js/: index.test.ts  index.ts
ios/: Package.swift
ios/ConnectivityCore/: Package.swift
ios/ConnectivityCore/Sources/ConnectivityCore/: IosConnectivityMapper.swift
ios/ConnectivityCore/Tests/ConnectivityCoreTests/: IosConnectivityMapperTests.swift
ios/Sources/: ConnectivityPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: connection_status.toml  supported_connection_types.toml
permissions/schemas/: schema.json
src/: commands.rs  error.rs  lib.rs  mobile.rs  platform.rs  types.rs
src/platform/: ios.rs  linux.rs  macos.rs  unsupported.rs  windows.rs
(+1 files in other folders)
